--- a/pdf/README
+++ b/pdf/README
@@ -107,7 +107,7 @@ timeSignatureWidth = 24
 === For a line
 
 
-
+#! NEEDS TO BE DONE
 
 # Express an interest in how many bars to a line
 # In many circumstances, will not be honoured. But used for open
