Git should ignore pycache Brand new input DSL parser

--- a/text/README
+++ b/text/README
@@ -1,5 +1,8 @@
 Handle the notation of dances
 
+== On the code
+I do not say this is a full work. I do not say, "This is an answer". This is a sketch or, to use the word, a cartoon. Like a sketch, it is in a way, done. There is more can be done. If you or I get to do this work, we could work this into an eight foot by ten foot Reynolds oil-painting, and pass three years doing that. More, can be said. But the ideas are shaped with care and, as is, they work. 
+
 == On notation
 I ought to write an essay on this. In brief, systems exist, like that of Mt. Laban. They become complex. They are hard to understand visually, and are not suited to computers, as they need a lot of rendering and computer power.
 
