--- a/parser/TODO
+++ b/parser/TODO
@@ -4,7 +4,416 @@ I got somewhere. I defined an input language, which is ok, and bult a parser, wh
 
 Where to go fro here is difficult.
 
+== Lillypond processing
+Not structure---thats ell docuented. We'd like to know, but hard to find.
 
 Lillypond is complicated by being using Guile, (look for SCM) with callbacks so most properties can be overridden.
 
-Lilly main seems to degenerate into multi-processing handling. Lilly parser seems to make the events. 
+Lilly main seems to degenerate into multi-processing handling. Lilly parser seems to make 'events'. Evebts, e.g.
+
+http://lilypond.org/doc/v2.18/Documentation/internals/noteevent
+
+which says the types lead to an engraver.
+
+Where the datatype 'event'?
+
+We know music is a list,
+http://lilypond.org/doc/v2.18/Documentation/extending/internal-music-representation
+
+We know engravers sit in stave information.
+
+We also know that engravers carry info like what note type, directions, etc. Engravers generate objects, which have no generic name, but the objects can be found by the engraver in lilly/. These objects do include some x/y details like how high to relatively sit on a stave.
+
+We know that the object list then uses a 'tramslator' to generate either performance or a writtem scpre.
+
+bars get numbered. 
+TODO: Number bars?test for lengths?
+
+line-interface draws lines from 'offsets' to
+SHORT version
+Don't know where control goes after scm/lilly. Does it run the functions in scm/music-functions?
+
+Don't know what a music event is as data, besides a type.
+
+Don't know how engravers get attached to contexts
+
+Don't know if final coordinates are controlled by engravers or layout. Or where they are triggerd.
+
+Can't find layout data either
+
+Or how bars are handled---objects or calculated?
+
+Or how columns align across lists
+
+
+Or final X/Y coordinate holders.
+
+All bad.
+
+See also,
+http://lilypond.org/doc/v2.18/Documentation/contributor/overview-of-lilypond-architecture
+?
+This is good, on the music sreaam, though it fails to explain interlacing?
+
+http://lilypond.org/website/pdf/thesis-erik-sandberg.pdf
+?
+== What we need
+We do need a basic parse, if only for error checking.
+...and expansion
+We need this general AST to render to a neutral struction to be used for both text and animation rendering.
+
+Would this be a music stream, with notes marked?
+e.g.
+(time 0: note e’2, lower staff, lower voice)
+for dancer
+(time 0: move clap dancer 1)
+
+So we need to add time and dancer id, while interlacing.
+We need specific renderers for text and animation.
+
+Like Lillypond, we could maybe use having these two different results fro a flexible phase structure, like lillypond's engraver/performance split.
+
+engraver-init.ly
+
+Score:
+
+  \consists "Paper_column_engraver"
+  \consists "Repeat_acknowledge_engraver"
+  \consists "Staff_collecting_engraver"
+
+  \alias "Timing"
+
+  %% An alias for Timing is established by the Timing_translator in
+  %% whatever context it is initialized, and the timing variables are
+  %% then copied from wherever Timing had been previously established.
+  %% The alias at Score level provides a target for initializing
+  %% Timing variables in layout definitions before any
+  %% Timing_translator has been run.
+
+  % timing translator must come BEFORE bar number engraver
+  \consists "Timing_translator"
+  \consists "Default_bar_line_engraver"
+  \consists "Output_property_engraver"
+  \consists "Tweak_engraver"
+  \consists "System_start_delimiter_engraver"
+  \consists "Mark_engraver"
+  \consists "Volta_engraver"
+  \consists "Metronome_mark_engraver"
+  \consists "Break_align_engraver"
+  \consists "Spacing_engraver"
+  \consists "Grace_spacing_engraver"
+  \consists "Vertical_align_engraver"
+  \consists "Stanza_number_align_engraver"
+  \consists "Bar_number_engraver"
+  \consists "Parenthesis_engraver"
+  \consists "Concurrent_hairpin_engraver"
+  \consists "Beam_collision_engraver"
+  \consists "Footnote_engraver"
+
+  \defaultchild "Staff"
+
+  \accepts "FretBoards"
+  \accepts "Staff"
+  \accepts "RhythmicStaff"
+  \accepts "TabStaff"
+  \accepts "VaticanaStaff"
+  \accepts "GregorianTranscriptionStaff"
+  \accepts "MensuralStaff"
+  \accepts "PetrucciStaff"
+  \accepts "StaffGroup"
+  \accepts "DrumStaff"
+  \accepts "KievanStaff"
+  \accepts "Lyrics"
+  \accepts "ChordNames"
+  \accepts "GrandStaff"
+  \accepts "ChoirStaff"
+  \accepts "PianoStaff"
+  \accepts "Devnull"
+  \accepts "NoteNames"
+  \accepts "FiguredBass"
+
+  noteToFretFunction = #determine-frets
+  predefinedDiagramTable = ##f
+  soloText = #"Solo"
+  soloIIText = #"Solo II"
+  aDueText = #"a2"
+  printPartCombineTexts = ##t
+  partCombineTextsOnNote = ##t
+  systemStartDelimiter =#'SystemStartBar
+
+  drumStyleTable = #drums-style
+
+  melismaBusyProperties = #default-melisma-properties
+  tieWaitForNote = ##f
+  clefGlyph = #"clefs.G"
+  clefPosition = #-2
+  middleCClefPosition = #-6
+  middleCPosition = #-6
+  firstClef = ##t
+
+  crescendoSpanner = #'hairpin
+  decrescendoSpanner = #'hairpin
+
+  defaultBarType = #"|"
+  doubleRepeatType = #":..:"
+  startRepeatType = #".|:"
+  endRepeatType = #":|."
+  barNumberVisibility = #first-bar-number-invisible-and-no-parenthesized-bar-numbers
+  barNumberFormatter = #robust-bar-number-function
+  clefTranspositionFormatter = #clef-transposition-markup
+  cueClefTranspositionFormatter = #clef-transposition-markup
+  automaticBars = ##t
+
+  explicitClefVisibility = #all-visible
+  explicitCueClefVisibility = #end-of-line-invisible
+  explicitKeySignatureVisibility = #all-visible
+  implicitTimeSignatureVisibility = #end-of-line-invisible
+
+  repeatCountVisibility = #all-repeat-counts-visible
+
+%% Other Timing variables are derived and set by the Timing_translator
+%% at initialization time by calling the functions in
+%% scm/time-signature-settings.scm
+
+  timeSignatureSettings = #default-time-signature-settings
+  timeSignatureFraction = 4/4
+
+  beamHalfMeasure = ##t
+
+  autoBeaming = ##t
+  autoBeamCheck = #default-auto-beam-check
+
+  scriptDefinitions = #default-script-alist
+
+  pedalSustainStrings = #'("Ped." "*Ped." "*")
+  pedalSustainStyle = #'text
+  pedalUnaCordaStrings = #'("una corda" "" "tre corde")
+  pedalUnaCordaStyle = #'text
+
+%% These are in ordinary italic font, including the *,
+%% but they are unlikely to be used,
+%% as the default pedal-style for SostenutoPedal is 'mixed':
+%% i.e.  Sost. Ped_____________________
+  pedalSostenutoStrings = #'("Sost. Ped." "*Sost. Ped." "*")
+  pedalSostenutoStyle = #'mixed
+
+  harmonicAccidentals = ##t
+  fingeringOrientations = #'(up down)
+  stringNumberOrientations = #'(up down)
+  strokeFingerOrientations = #'(right)
+
+  lyricMelismaAlignment = #LEFT
+  markFormatter = #format-mark-letters
+  rehearsalMark = #1
+  subdivideBeams = ##f
+  extraNatural = ##t
+  autoAccidentals = #`(Staff ,(make-accidental-rule 'same-octave 0))
+  autoCautionaries = #'()
+
+  printKeyCancellation = ##t
+  keyAlterationOrder = #`(
+    (6 . ,FLAT) (2  . ,FLAT) (5 . ,FLAT ) (1  . ,FLAT) (4  . ,FLAT) (0  . ,FLAT) (3  . ,FLAT)
+    (3 . ,SHARP) (0 . ,SHARP) (4 . ,SHARP) (1 . ,SHARP) (5 . ,SHARP) (2 . ,SHARP) (6 . ,SHARP)
+    (6 . ,DOUBLE-FLAT) (2 . ,DOUBLE-FLAT) (5 . ,DOUBLE-FLAT ) (1 . ,DOUBLE-FLAT) (4 . ,DOUBLE-FLAT) (0 . ,DOUBLE-FLAT) (3 . ,DOUBLE-FLAT)
+    (3  . ,DOUBLE-SHARP) (0 . ,DOUBLE-SHARP) (4 . ,DOUBLE-SHARP) (1 . ,DOUBLE-SHARP) (5 . ,DOUBLE-SHARP) (2 . ,DOUBLE-SHARP) (6 . ,DOUBLE-SHARP)
+  )
+
+  barCheckSynchronize = ##f
+
+%% chord names:
+  chordNameFunction = #ignatzek-chord-names
+  minorChordModifier = #(make-simple-markup "m")
+  additionalPitchPrefix = #"" % was "add"
+  majorSevenSymbol = #whiteTriangleMarkup
+  chordNameLowercaseMinor = ##f
+  chordNameSeparator = #(make-hspace-markup 0.5)
+  slashChordSeparator = #(make-simple-markup "/")
+  chordNameExceptions = #ignatzekExceptions
+  chordNoteNamer = #'()
+  chordRootNamer = #note-name->markup
+  chordPrefixSpacer = #0
+  chordNameExceptionsFull = #fullJazzExceptions
+  chordNameExceptionsPartial = #partialJazzExceptions
+  noChordSymbol = #(make-simple-markup "N.C.")
+
+  bassStaffProperties = #'((assign clefGlyph "clefs.F")
+  (assign clefPosition 2)
+  (assign middleCPosition 6)
+  (assign middleCClefPosition 6))
+%% tablature:
+  stringOneTopmost = ##t
+  highStringOne = ##t
+
+%% One may change the string tunings as follows :
+%% The length of the list must be equal to the number of strings
+  stringTunings = #guitar-tuning
+  tablatureFormat = #fret-number-tablature-format
+  tabStaffLineLayoutFunction = #tablature-position-on-lines
+
+%%
+  figuredBassFormatter = #format-bass-figure
+  metronomeMarkFormatter = #format-metronome-markup
+
+  %% See also make-voice-props-set
+  graceSettings = #score-grace-settings
+
+  keepAliveInterfaces = #'(
+    bass-figure-interface
+    chord-name-interface
+    cluster-beacon-interface
+    fret-diagram-interface
+    lyric-syllable-interface
+    note-head-interface
+    tab-note-head-interface
+    lyric-interface
+    percent-repeat-item-interface
+    percent-repeat-interface
+
+    ;; need this, as stanza numbers are items, and appear only once.
+    stanza-number-interface
+  )
+  % \quoteDuring is supposed to quote everything, cueDuring only the essentials
+  quotedEventTypes = #'(StreamEvent)
+  quotedCueEventTypes = #'(
+    note-event
+    rest-event
+    tie-event
+    beam-event
+    tuplet-span-event)
+  instrumentTransposition = #(ly:make-pitch 0 0 0)
+
+  topLevelAlignment = ##t
+
+  timing = ##t
+
+Staff:
+
+  \consists "Font_size_engraver"
+
+  \consists "Pitched_trill_engraver"
+  \consists "Output_property_engraver"
+  \consists "Arpeggio_engraver"
+  \consists "Multi_measure_rest_engraver"
+  \consists "Text_spanner_engraver"
+  \consists "Trill_spanner_engraver"
+  \consists "Grob_pq_engraver"
+  \consists "Forbid_line_break_engraver"
+  \consists "Laissez_vibrer_engraver"
+  \consists "Repeat_tie_engraver"
+  \consists "Note_head_line_engraver"
+  \consists "Glissando_engraver"
+  \consists "Ligature_bracket_engraver"
+  \consists "Breathing_sign_engraver"
+  \consists "Note_heads_engraver"
+  \consists "Dots_engraver"
+  \consists "Rest_engraver"
+
+  %% switch on to make stem directions interpolate for the
+  %% center line.
+  %  \consists "Melody_engraver"
+
+  \consists "Stem_engraver"
+  \consists "Beam_engraver"
+  \consists "Grace_beam_engraver"
+  \consists "Auto_beam_engraver"
+  \consists "Grace_auto_beam_engraver"
+
+  %% must come before Script_column_engraver.
+  \consists "New_fingering_engraver"
+
+  \consists "Chord_tremolo_engraver"
+  \consists "Double_percent_repeat_engraver"
+  \consists "Percent_repeat_engraver"
+  \consists "Slash_repeat_engraver"
+  \consists "Part_combine_engraver"
+
+  \consists "Text_engraver"
+  \consists "Dynamic_engraver"
+  \consists "Dynamic_align_engraver"
+  \consists "Fingering_engraver"
+  \consists "Bend_engraver"
+
+  \consists "Script_engraver"
+  \consists "Script_column_engraver"
+  \consists "Rhythmic_column_engraver"
+  \consists "Note_spacing_engraver"
+  \consists "Spanner_break_forbid_engraver"
+  \consists "Phrasing_slur_engraver"
+  \consists "Cluster_spanner_engraver"
+  \consists "Slur_engraver"
+  \consists "Tie_engraver"
+  \consists "Tuplet_engraver"
+  \consists "Grace_engraver"
+  \consists "Instrument_switch_engraver"
+
+
+voice: 
+
+  \consists "Font_size_engraver"
+
+  \consists "Pitched_trill_engraver"
+  \consists "Output_property_engraver"
+  \consists "Arpeggio_engraver"
+  \consists "Multi_measure_rest_engraver"
+  \consists "Text_spanner_engraver"
+  \consists "Trill_spanner_engraver"
+  \consists "Grob_pq_engraver"
+  \consists "Forbid_line_break_engraver"
+  \consists "Laissez_vibrer_engraver"
+  \consists "Repeat_tie_engraver"
+  \consists "Note_head_line_engraver"
+  \consists "Glissando_engraver"
+  \consists "Ligature_bracket_engraver"
+  \consists "Breathing_sign_engraver"
+  \consists "Note_heads_engraver"
+  \consists "Dots_engraver"
+  \consists "Rest_engraver"
+
+  %% switch on to make stem directions interpolate for the
+  %% center line.
+  %  \consists "Melody_engraver"
+
+  \consists "Stem_engraver"
+  \consists "Beam_engraver"
+  \consists "Grace_beam_engraver"
+  \consists "Auto_beam_engraver"
+  \consists "Grace_auto_beam_engraver"
+
+  %% must come before Script_column_engraver.
+  \consists "New_fingering_engraver"
+
+  \consists "Chord_tremolo_engraver"
+  \consists "Double_percent_repeat_engraver"
+  \consists "Percent_repeat_engraver"
+  \consists "Slash_repeat_engraver"
+  \consists "Part_combine_engraver"
+
+  \consists "Text_engraver"
+  \consists "Dynamic_engraver"
+  \consists "Dynamic_align_engraver"
+  \consists "Fingering_engraver"
+  \consists "Bend_engraver"
+
+  \consists "Script_engraver"
+  \consists "Script_column_engraver"
+  \consists "Rhythmic_column_engraver"
+  \consists "Note_spacing_engraver"
+  \consists "Spanner_break_forbid_engraver"
+  \consists "Phrasing_slur_engraver"
+  \consists "Cluster_spanner_engraver"
+  \consists "Slur_engraver"
+  \consists "Tie_engraver"
+  \consists "Tuplet_engraver"
+  \consists "Grace_engraver"
+  \consists "Instrument_switch_engraver"
+}
+ 
+== PDF rendering
+TODO: Main one---decide how to generate x/y coordinates fron the tree parse.
+And also, how to coordinate between dancers?
+
+scm/music-functions has tree recursers? These pesumably do...
+TODO: compiler phases to generate specifics from the generic parse. In particular, instruction functions must be run to generate event, e.g. non visual repeats expanded, visual repeats with barline instructions, etc.
+ 
+
+
