--- a/parser/TODO
+++ b/parser/TODO
@@ -4,16 +4,38 @@ I got somewhere. I defined an input language, which is ok, and bult a parser, wh
 
 Where to go fro here is difficult.
 
-=== Reading Lilypond code
-Lilypond is programmed mainly in Guile and C++. People who read code should have little trouble understanding C++ and Guile line by line. However, here are some hints for trying to understand the structure of the code.
+== This guide
+This guide is for those who would like to understand Lilypond source code. It is not a line-by-line analysis, or an exhastive API reference.  It is intenfded as a help for navigating the Lilypond codebase.
 
-Guile is a LISP, and LISPs tend to be very clean code. However, as there is no namespacing, it is not always clear what is running where and when. If a file is 'executed' or run, it's contents are executed one by one, jumping about and sometimes using macro substitutions. In a Guile file, you may want to pay attention to isolated lines, as the file may be executed as a whole.
+This guide is not needed if you wish to use Lilypond. But understanding parts of this guide may provide a deeper understanding of how features of Lilypond are constructed, how they behave, and how they connect together.
 
-C++ allows multiple inheritance and can define singletons. Throughout Lilypond C++ files, you will see a many imports at the top of the file. Bear in mind these may represent a wider range of possibilities than other languages. They may indicate interfaces in the way Java defines them, but also multiple inheritance patterns or singleton objects. So the imports may refer to structurally remote origins. The imported code may be building bridges with another system, it may not represent a 'this object is/inherits that' connection. And methods may manipulate contents in remote locations, not in the object itself.
+=== Reading Lilypond code 
+=== The two languages
+Lilypond is programmed mainly in Guile and C++. People who read code should have little trouble understanding C++ and Guile, line by line. However, here are some hints for trying to understand the structure of the code.
 
+Guile is Scheme-type LISP language, and LISPs tend to be very clean code. However, as there is no namespacing, it is not always clear what is running where and when. If a file is 'executed' or run, it's contents are executed one by one, jumping about and sometimes using macro substitutions. In a file of Guile code, you may want to pay attention to isolated lines, as the file may be executed as a whole.
 
-==== An example of Lilypond depths
-Here is an example of how Lilypond code, despite the clarity of layout, can can become extended. Scattered throughout the code is the command 'get_object'. Lets say you become curious how this is implemented (perhaps those who use LISP will guess, but this example is for the genral code reader). You will find that no 'get_object' method seems to exist on any object. But, deep inside a huge list returned by 'grep', you will discover,
+C++ is often explicit and verbose where other languages would provide convenience structures. Throughout Lilypond C++ files you will see many imports at the top of the file. Bear in mind these represent a wider range of possibilities than other languages.  For example, C++ allows multiple inheritance and free import of interfaces. When looking at Lilypond code, the imported code may not represent a 'this object is/inherits that' connection---it may be building bridges with another system, or encapsulating a small area of functionality. Also, C++ requires explicit definition of how data structures are constructed, so many imports are references to simple structures---for example, the ''Axis' label, very widespread in the music notational code, is a simple enum. 
+
+=== The interface between the two languages
+This guide will not cover the how the languages pass information and fuctionality between each other. This is deliberate. The information provides little help in understanding the flow of data and control within Lilypond.
+
+C++ is mainly used in Lilypond to provide efficient data-carrying structures, and low-level collections. Guile code is used to maipulate the data, and interface to the user.
+
+=== A quick guide to the namimg
+''gorb' refers to a ''Graphical object'. It is a C++ object wrapped so it can be manipulated by Guile code. Grobs are not even used if Lilypond is constructing for MIDI.
+
+''smob' is a ''Scheme object'. It is used when a Guile object is wrappped or unwrapped for use in Guile code. 
+
+''layout object' is rarely mentioned in the codebase, but we use the idea here. It is the C++ object which backs data-carrying objects used to construct some useful result from Lilypond data.  
+
+''music expression' we do not use this idea much here, but it is the abstract construct, or perhaps the Guile represenstation, constructed from Lilypond's input language. In more general computing terms, the Abstract Syntax Tree returned from the parser.
+
+''event stream' Lilypond reduces source file inputs to an intermediate representation, a list of ''events'. While there is no direct access to this structure, the event stream is used as the input to all processing for Lilypond's two outputs, sheet music and MIDI. For more information, see below, or the paper by Eric Sandberg.  
+
+ 
+==== An example of the depth of Lilypond code
+Here is an example of how Lilypond code, despite the clarity of layout, has become extended. Scattered throughout the code is the command 'get_object'. Let's say you become curious how this is implemented (perhaps those who use LISP aand C++ languages will guess, but this example is for the general code reader). You will find that no 'get_object' method seems to exist on any object. But, deep inside a huge list returned by 'grep', you will discover,
 
 lily/include/lily-guile-macros.hh:#define get_object(x) internal_get_object (ly_symbol2scm (x))
 
@@ -21,7 +43,7 @@ If you search for 'internal_get_object', you will find,
 
 lily/grob-property.cc:Grob::internal_get_object (SCM sym) const
 
-Ah. That command is a interface to grob properties. Sometimes it caches, sometimes not. The command negociates the differences in types which may be held as properties. The source file also defines a callback 'hook' which can be registered when a property is modified. Overall, the command is a convenience to a property system.
+Ah. That command is a interface to Grobs and grob properties. Sometimes it caches, sometimes not. The backing code negociates the differences in types which may be held as properties. The source file also defines a callback 'hook' which can be registered when a property is modified. Overall, the command is for returning Grobs from storage, and an interface to a property system.
 
 This is an indication of Lilypond's maturity. It is also an example how Lilypond's flexible dual-language system can lead to depths in understanding the code.
 
@@ -93,7 +115,7 @@ lily/translation.cc
 
 contains little beyond getting the global context and adding a listener
 
-Whats an acknowlwgwmwnt?
+Whats an acknowledgment?
 
 Performer_group
 Score_engraver
@@ -146,7 +168,7 @@ TODO: Number bars?test for lengths?
 line-interface draws lines from 'offsets' to
 
 === Why dispatch?
-With an event sream, why dispatch? Complicated syem, when we could stary eith data in tables?
+With an event stream, why dispatch? Complicated syem, when we could stary eith data in tables?
 
 is engraving dispatch per context? But why, if we have an event list?
 
@@ -165,36 +187,21 @@ kinds. And that announce grob is signalled ebvery time. But not so interesting (
 lily/grob.cc
 Stubs for get_system() and
 
-Probably the main thing to understand is there is a lot of code unwrapping C++ layout objects and retrieving and validating properties set by users. This centres round the ''dim_cache_' structure. This is initiated per grob, and in full looks like (Axis is a simple enumeration X = 1, Y = 2, NO_AXES = 3),
-
-dim_cache_ = Array(
-Axis.X = (offset, parent, Interval(left, right),
-Axis.Y = (offset, parent, Interval(left, right),
-Axis.NO_AXES = (offset, parent, Interval(left, right)
-)
-
+Axis_group_interface has a mutual dependence on Align_interface
  
 getting vertical alignments
 
-=== Gathering grob data
-This is C++ so hard to trace.
 
-The key interface seems to be lilly/system.cc. Includes pre_processing, post_processing and all_elements_
 
-"This is the top-level object: Each object in a score"
-               " ultimately has a @code{System} object as its X and"
-               " Y@tie{}parent."
+=== Generating sheet music
+While Lilypond can be used to generate MIDI code, the main purpose is to produce sheet music. The following is some help to understanding the Lilypond code for sheet music, and how Lilypond reaches final rendering.
 
-It does include plenty of gear about pageing, unmentioned elsewhere.
+=== Grob data organisation
+This snippet gives a clue,
 
-Also, Pointer_group_interface, which seems to be a searchable grob array, backs spanner.cc.
-
-Then,
-#bq
-For example, the System grob can be both parent (on the Y-side) and grandparent (twice on the X-side) to a VerticalAlignment grob. 
-#
 http://lilypond.org/doc/v2.18/Documentation/snippets/tweaks-and-overrides#tweaks-and-overrides-displaying-grob-ancestry
 
+Also, Pointer_group_interface, which seems to be a searchable grob array, backs spanner.cc.
 
 NoteHead X,Y: NoteColumn
     X: PaperColumn
@@ -209,6 +216,10 @@ NoteHead X,Y: NoteColumn
 
 This does clarify something. The grob organisation is a tree of grobs, probably all relatively aligned. 
 
+It also tells us something else. How does Lilypond vertically align output? In a music score, this is essential. Musical staves spread across pages, and must be broken for lines. But, in most scores, barlines on staves must be aligned vertically, and so must the notes between staves. It's worth pointing out that text processing layout engines concentrate on flowing text and line-breaking, not vertical alignment between sucessive line elements. To take an example, CSS engines in web browsers are a sophisticated text and graphic layout engine. Yet they have had, for many years, an inability to organise columns. Even sophisticated text layout engines can not align two characters in successive lines of text (they can centre text, a similar operation). Agreed, this is a a feature most people would not need for text.
+
+The answer is, Lilypond allows separation of X and Y layout positioning. This immediately produces a far more complex layout of graphical model building. X and Y have seperate inheritance chains. but it means the   
+ 
 define-context-properties
 
 Where the tree is rooted, I do not know?
@@ -217,6 +228,58 @@ scm/define-context-properties includes,
      (rootSystem ,ly:grob? "The System object.")
 ->scm/lily.scm (loaded in)
 which suggests they are built on contexts?
+
+
+==== System
+The key interface seems to be lilly/system.cc. Includes pre_processing, post_processing and all_elements_
+
+"This is the top-level object: Each object in a score"
+               " ultimately has a @code{System} object as its X and"
+               " Y@tie{}parent."
+
+It does include plenty of gear about pageing, unmentioned elsewhere.
+
+
+Then,
+#bq
+For example, the System grob can be both parent (on the Y-side) and grandparent (twice on the X-side) to a VerticalAlignment grob. 
+#
+http://lilypond.org/doc/v2.18/Documentation/snippets/tweaks-and-overrides#tweaks-and-overrides-displaying-grob-ancestry
+
+
+
+==== Understanding layout code
+The layout objects are where the complexity lies, and the calculation.
+
+===== The Dim cache structure
+Probably the main thing to understand is there is a lot of code unwrapping C++ layout objects and retrieving and validating properties set by users. This centres round the ''dim_cache_' structure. This is initiated per grob, and in full looks like (Axis is a simple enumeration X = 1, Y = 2, NO_AXES = 3),
+
+dim_cache_ = Array(
+Axis.X = (offset, parent, Interval(left, right),
+Axis.Y = (offset, parent, Interval(left, right),
+Axis.NO_AXES = (offset, parent, Interval(left, right)
+)
+
+The result seems to gather given data with user overrides?
+
+===== Pure functions
+Many functions in the layout objects are labeled ''pure'. 
+
+Lilypond positioning is a complicated process. It is difficult to know the final positioning of objects before line breaking. Yet a rough estimate of position and size is needed so line breaking can be performed. This problem can be extended to a generality---Lilypond object positions often depend on the positions of other objects. These interactions can cascade---if notes appear on ledger lines, their position is calculated in a different way to notes on staff lines. In turn, the heights of leger lines then affect staff line spacing.
+
+Lilypond layout object informally categorise the ongoing process of positioning by creating a set of functions called 'pure' functions. Pure functions are a guess at the size and positioning of Lilypond objects. While the ideas around how pure functions are informal, they are mostly the same. The calculation of a guess should not rely on data that mutates (the data may be pre-set from properties but, for example, should not be a temporary or an accumulating variable). A pure function should always return the same result (be 'idempotent'). And a pure function should not affect data elsewhere (cause side-effects). 
+
+Sometimes the positiong and height can be provided by pure functions only. Note heads are only styled from music properties like duration. They not change size depending on other values. The guess will be the final value.
+
+Pure functions are used early in the positioning process, before line-breaking. pure functions have a formal signature which may include start and end positioning, end position is not needed for single items, and is redundant. Pure functions do not need to be registered, and Lilypond searches to see if a grob can return a pure value.
+
+Pure functions only appear for Y axis calculations, because the X axis is 'free', and the Y axis positioning depends on it. 
+
+This commentary is enough to help you identify a large swathe of funtionality when reading the code. It is probably not enough to help you write a pure function. For that, see the documetation below.
+
+Lillypond ''Contributors' manual contains a full section on ''pure' functions,  
+http://lilypond.org/doc/v2.18/Documentation/contributor/understanding-pure-properties
+
 
 === in SHORT
 Don't know where control goes after scm/lilly. Does it run the functions in scm/music-functions?
